Fixed #7: in titulis 'ad laudes' addivi

--- a/hymnarium_op_loose.tex
+++ b/hymnarium_op_loose.tex
@@ -17,7 +17,7 @@ headsep=3mm,
 
 \pagestyle{empty}
 
-\feast{A1F1}{Tempus Adventus}
+\feast{A1F1}{Tempus Adventus ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -25,7 +25,7 @@ headsep=3mm,
 \gscore{A1F1LH}{H}{}{Vox clara ecce intonat}
 \newpage
 
-\feast{1208}{In Conceptione Immaculata Beatæ Mariæ Virginis}
+\feast{1208}{In Conceptione Immaculata Beatæ Mariæ Virginis ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -33,7 +33,7 @@ headsep=3mm,
 \gscore{CBMVLHa}{H}{}{O gloriosa Domina (tonus prior)}
 \newpage
 
-\feast{1221}{S. Thomæ Apostoli}
+\feast{1221}{S. Thomæ Apostoli ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -41,7 +41,7 @@ headsep=3mm,
 \gscore{APEXLHa}{H}{}{Aeterna Christi munera (Ap. extra T.P., II classis)}
 \newpage
 
-\feast{1226}{S. Stephani Protomartyris}
+\feast{1226}{S. Stephani Protomartyris ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -49,7 +49,7 @@ headsep=3mm,
 \gscore{1226LH}{H}{}{Martyr Dei (tonus nativitatis)}
 \newpage
 
-\feast{1227}{S. Joannis Apostoli et Evangelistæ}
+\feast{1227}{S. Joannis Apostoli et Evangelistæ ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -57,7 +57,7 @@ headsep=3mm,
 \gscore{1227LH}{H}{}{Aeterna Christi munera (tonus nativitatis)}
 \newpage
 
-\feast{1228}{Sanctorum Innocentium Martyrum}
+\feast{1228}{Sanctorum Innocentium Martyrum ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -65,7 +65,7 @@ headsep=3mm,
 \gscore{1228LH}{H}{}{Caterva matrum personat}
 \newpage
 
-\feast{0101}{In Circumcisione Domini}
+\feast{0101}{In Circumcisione Domini ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -73,7 +73,7 @@ headsep=3mm,
 \gscore{0101LH}{H}{}{A solis ortus cardine}
 \newpage
 
-\feast{N2F1}{Sanctissimi Nominis Jesu}
+\feast{N2F1}{Sanctissimi Nominis Jesu ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -81,7 +81,7 @@ headsep=3mm,
 \gscore{N2F1LH}{H}{}{Jesu decus angelicum}
 \newpage
 
-\feast{0106}{In Epiphania Domini}
+\feast{0106}{In Epiphania Domini ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
@@ -89,7 +89,7 @@ headsep=3mm,
 \gscore{0106LH}{H}{}{A Patre Unigenitus}
 \newpage
 
-\feast{E1F1}{Sanctæ Familiæ Jesu, Mariæ, Joseph}
+\feast{E1F1}{Sanctæ Familiæ Jesu, Mariæ, Joseph ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
