Hymnos pro S.Thomæ Aq. et S.Vincentius Fer., atque TP, addivi

--- a/hymnarium_op.tex
+++ b/hymnarium_op.tex
@@ -7,65 +7,57 @@
 
 \begin{document}
 
-\feast{A1F1}{Tempus Adventus}
+\feast{PT}{Proprium de Tempore}
 	{Hymni ad Laudes}{Hymni ad Laudes}{1}{}
+	{}{}{}
+	{}
+	{}
+
+\feast{A1F1}{Tempus Adventus}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
 	{}{}{}
 	{}
 	{}
 \rubric{In Adventu usque ad Vigiliam Nativitatis inclusive.}
 \gscore{A1F1LH}{H}{}{Vox clara ecce intonat}
 
-\feast{1208}{In Conceptione Immaculata\\Beatæ Mariæ Virginis}
-	{Hymni ad Laudes}{Hymni ad Laudes}{1}{Die 8 Decembris}
-	{}{}{}
-	{}
-	{}
-\gscore{CBMVLHa}{H}{}{O gloriosa Domina (tonus prior)}
-
-\feast{1221}{S. Thomæ Apostoli}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 21 Decembris}
-	{}{}{}
-	{}
-	{}
-\gscore{APEXLHa}{H}{}{Aeterna Christi munera (Ap. extra T.P., II classis)}
-
 \feast{1225}{In Nativitate Domini}
-	{Hymni ad Laudes}{Hymni ad Laudes}{1}{Die 25 Decembris}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 25 Decembris}
 	{}{}{}
 	{}
 	{}
 \rubric{Hymnus non dicitur.}
 
 \feast{1226}{S. Stephani Protomartyris}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 26 Decembris}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 26 Decembris}
 	{}{}{}
 	{}
 	{}
 \gscore{1226LH}{H}{}{Martyr Dei (tonus nativitatis)}
 
 \feast{1227}{S. Joannis Apostoli et Evangelistæ}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 27 Decembris}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 27 Decembris}
 	{}{}{}
 	{}
 	{}
 \gscore{1227LH}{H}{}{Aeterna Christi munera (tonus nativitatis)}
 
 \feast{1228}{Sanctorum Innocentium Martyrum}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 28 Decembris}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 28 Decembris}
 	{}{}{}
 	{}
 	{}
 \gscore{1228LH}{H}{}{Caterva matrum personat}
 
 \feast{N1F1}{Dominica infra Octavam Nativitatis}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
 	{}
 	{}
 \rubric{Hymnus ut in Circumcisione.}
 
 \feast{0101}{In Circumcisione Domini}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 1 Januarii}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 1 Januarii}
 	{}{}{}
 	{}
 	{}
@@ -74,7 +66,7 @@
 \newpage
 
 \feast{N2F1}{Sanctissimi Nominis Jesu}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Dominica inter Circumcisionem et Epiphaniam}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Dominica inter Circumcisionem et Epiphaniam}
 	{}{}{}
 	{}
 	{}
@@ -88,11 +80,87 @@
 \gscore{0106LH}{H}{}{A Patre Unigenitus}
 
 \feast{E1F1}{Sanctæ Familiæ Jesu, Mariæ, Joseph}
-	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Dominica infra Octavam Epiphaniæ}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Dominica infra Octavam Epiphaniæ}
 	{}{}{}
 	{}
 	{}
 \gscore{E1F1LH}{H}{}{O gente felix hospita}
+
+\feast{F1}{In Dominicis per annum}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{F1LH}{H}{}{Ecce jam noctis}
+
+\feast{Q1F1}{Tempus Quadragesimæ}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{Q1F1LH}{H}{}{Jam Christe sol justitiae}
+
+\feast{Q5F1}{Tempus Passionis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{Q5F1LH}{H}{}{Lustris sex qui jam peractis}
+
+\feast{P1F1}{Tempus Resurrectionis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P1F1LH}{H}{}{Sermone blando}
+
+\feast{CO}{Communia}
+	{Hymni ad Laudes}{Hymni ad Laudes}{1}{}
+	{}{}{}
+	{}
+	{}
+	
+\feast{PS}{Proprium de Sanctis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{1}{}
+	{}{}{}
+	{}
+	{}
+	
+\feast{1208}{In Conceptione Immaculata\\Beatæ Mariæ Virginis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 8 Decembris}
+	{}{}{}
+	{}
+	{}
+\gscore{CBMVLHa}{H}{}{O gloriosa Domina (tonus prior)}
+
+\feast{1221}{S. Thomæ Apostoli}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 21 Decembris}
+	{}{}{}
+	{}
+	{}
+\gscore{APEXLHa}{H}{}{Aeterna Christi munera (Ap. extra T.P., II classis)}
+
+\feast{0307}{S. Thomæ de Aquino}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 7 Martii}
+	{}{}{}
+	{}
+	{}
+\gscore{0307LH}{H}{}{Lauda Mater... Thomæ}
+
+\feast{0319}{S. Joseph Sponsi B. M. V.}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 19 Martii}
+	{}{}{}
+	{}
+	{}
+\gscore{0319LH}{H}{}{Iste quem laeti}
+\newpage
+
+\feast{0405}{S. Vincentii Ferrerii}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 5 Aprilis}
+	{}{}{}
+	{}
+	{}
+\gscore{0405LH}{H}{}{Magne Vincenti}
 
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
