--- a/hymnarium_op_loose.tex
+++ b/hymnarium_op_loose.tex
@@ -97,6 +97,62 @@ headsep=3mm,
 \gscore{E1F1LH}{H}{}{O gente felix hospita}
 \newpage
 
+\feast{F1}{In Dominicis per annum ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{F1LH}{H}{}{Ecce jam noctis}
+\newpage
+
+\feast{Q1F1}{Tempus Quadragesimæ ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{Q1F1LH}{H}{}{Jam Christe sol justitiae}
+\newpage
+
+\feast{Q5F1}{Tempus Passionis ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{Q5F1LH}{H}{}{Lustris sex qui jam peractis}
+\newpage
+
+\feast{0307}{S. Thomæ de Aquino ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0307LH}{H}{}{Lauda Mater... Thomæ}
+\newpage
+
+\feast{0319}{S. Joseph Sponsi B. M. V. ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0319LH}{H}{}{Iste quem laeti}
+\newpage
+
+\feast{P1F1}{Tempus Resurrectionis ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P1F1LH}{H}{}{Sermone blando}
+\newpage
+
+\feast{0405}{S. Vincentii Ferrerii ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0405LH}{H}{}{Magne Vincenti}
+\newpage
+
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
 %\renewcommand\contentsname{Index Generalis}
