Ajout 9 hymnes mai-juin-juillet. S. Joseph artisan est manquant

--- a/hymnarium_op.tex
+++ b/hymnarium_op.tex
@@ -114,6 +114,41 @@
 	{}
 \gscore{P1F1LH}{H}{}{Sermone blando}
 
+\feast{P5F5}{In Ascensione Domini}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P5F5LH}{H}{}{Tu Christe nostrum gaudium}
+
+\feast{P7F1}{In festo Pentecostes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P7F1LH}{H}{}{Impleta gaudent viscera}
+
+\feast{H1F1}{In festo Sanctissimæ Trinitatis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H1F1LH}{H}{}{O Trinitas laudabilis}
+
+\feast{H1F5}{In festo Corporis Christi}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H1F5LH}{H}{}{Verbum supernum prodiens nec}
+
+\feast{H2F6}{In festo Sacratissimi Cordis Jesu}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H2F6LH}{H}{}{Summi Parentis Filio}
+
 \feast{CO}{Communia}
 	{Hymni ad Laudes}{Hymni ad Laudes}{1}{}
 	{}{}{}
@@ -161,6 +196,34 @@
 	{}
 	{}
 \gscore{0405LH}{H}{}{Magne Vincenti}
+
+\feast{0430}{S. Catharinæ Senensis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 30 Aprilis}
+	{}{}{}
+	{}
+	{}
+\gscore{0430LH}{H}{}{Jam ferox}
+
+\feast{0624}{In Nativitate S. Joanni Baptistæ}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 24 Junii}
+	{}{}{}
+	{}
+	{}
+\gscore{0624LH}{H}{}{O nimis felix}
+
+\feast{0629}{SS. Petri et Pauli}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 29 Junii}
+	{}{}{}
+	{}
+	{}
+\gscore{0629LH}{H}{}{Olivae binae}
+
+\feast{0701}{Pretiosissimi Sanguinis D. N. J. C.}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 1 Julii}
+	{}{}{}
+	{}
+	{}
+\gscore{0701LH}{H}{}{Salvete Christi vulnera}
 
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
