--- a/hymnarium_op_loose.tex
+++ b/hymnarium_op_loose.tex
@@ -153,6 +153,78 @@ headsep=3mm,
 \gscore{0405LH}{H}{}{Magne Vincenti}
 \newpage
 
+\feast{0430}{S. Catharinæ Senensis ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0430LH}{H}{}{Jam ferox}
+\newpage
+
+\feast{P5F5}{In Ascensione Domini ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P5F5LH}{H}{}{Tu Christe nostrum gaudium}
+\newpage
+
+\feast{P7F1}{In festo Pentecostes ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{P7F1LH}{H}{}{Impleta gaudent viscera}
+\newpage
+
+\feast{H1F1}{In festo Sanctissimæ Trinitatis ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H1F1LH}{H}{}{O Trinitas laudabilis}
+\newpage
+
+\feast{H1F5}{In festo Corporis Christi ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H1F5LH}{H}{}{Verbum supernum prodiens nec}
+\newpage
+
+\feast{H2F6}{In festo Sacratissimi Cordis Jesu ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{H2F6LH}{H}{}{Summi Parentis Filio}
+\newpage
+
+\feast{0624}{In Nativitate S. Joanni Baptistæ ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0624LH}{H}{}{O nimis felix}
+\newpage
+
+\feast{0629}{SS. Petri et Pauli ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0629LH}{H}{}{Olivae binae}
+\newpage
+
+\feast{0701}{Pretiosissimi Sanguinis D. N. J. C. ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0701LH}{H}{}{Salvete Christi vulnera}
+\newpage
+
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
 %\renewcommand\contentsname{Index Generalis}
