Correction S. Joseph artisan, ajout Sacré Coeur post 1948

--- a/hymnarium_op.tex
+++ b/hymnarium_op.tex
@@ -147,7 +147,10 @@
 	{}{}{}
 	{}
 	{}
+\rubric{Juxta morem antiquiorem:}
 \gscore{H2F6LH}{H}{}{Summi Parentis Filio}
+\rubric{Juxta morem recentiorem:}
+\gscore{H2F6bLH}{H}{}{Cor arca legem continens}
 
 \feast{CO}{Communia}
 	{Hymni ad Laudes}{Hymni ad Laudes}{1}{}
@@ -203,6 +206,13 @@
 	{}
 	{}
 \gscore{0430LH}{H}{}{Jam ferox}
+
+\feast{0501b}{S. Joseph Opificis}
+	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 1 Maii (usus recentior)}
+	{}{}{}
+	{}
+	{}
+\gscore{0501bLH}{H}{}{Aurora solis nuntia}
 
 \feast{0624}{In Nativitate S. Joanni Baptistæ}
 	{Hymni ad Laudes}{Hymni ad Laudes}{2}{Die 24 Junii}
