--- a/hymnarium_op_loose.tex
+++ b/hymnarium_op_loose.tex
@@ -161,6 +161,13 @@ headsep=3mm,
 \gscore{0430LH}{H}{}{Jam ferox}
 \newpage
 
+\feast{0501b}{S. Joseph Opificis ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0501bLH}{H}{}{Aurora solis nuntia}
+
 \feast{P5F5}{In Ascensione Domini ad Laudes}
 	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
 	{}{}{}
@@ -198,7 +205,17 @@ headsep=3mm,
 	{}{}{}
 	{}
 	{}
+\rubric{juxta morem antiquiorem}
 \gscore{H2F6LH}{H}{}{Summi Parentis Filio}
+\newpage
+
+\feast{H2F6b}{In festo Sacratissimi Cordis Jesu ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\rubric{juxta morem recentiorem}
+\gscore{H2F6bLH}{H}{}{Cor arca legem continens}
 \newpage
 
 \feast{0624}{In Nativitate S. Joanni Baptistæ ad Laudes}
