Ajout S. Michel. Closes #8

--- a/hymnarium_op.tex
+++ b/hymnarium_op.tex
@@ -235,6 +235,14 @@
 	{}
 \gscore{0701LH}{H}{}{Salvete Christi vulnera}
 
+\feast{0929}{S. Michaëlis Archangeli}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{Die 29 Septembris}
+	{}{}{}
+	{}
+	{}
+\gscore{0929LH}{H}{}{Christe sanctorum}
+\newpage
+
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
 %\renewcommand\contentsname{Index Generalis}
