--- a/hymnarium_op_loose.tex
+++ b/hymnarium_op_loose.tex
@@ -242,6 +242,14 @@ headsep=3mm,
 \gscore{0701LH}{H}{}{Salvete Christi vulnera}
 \newpage
 
+\feast{0929}{S. Michaëlis Archangeli ad Laudes}
+	{Hymni ad Laudes}{Hymni ad Laudes}{3}{}
+	{}{}{}
+	{}
+	{}
+\gscore{0929LH}{H}{}{Christe sanctorum}
+\newpage
+
 %\newpage
 %\cprintindex{H}{Index Hymnorum}
 %\renewcommand\contentsname{Index Generalis}
